Added image carousel on product detail page

--- a/src/404.md
+++ b/src/404.md
@@ -4,3 +4,4 @@ permalink: 404.html
 title: Content not found.
 eleventyExcludeFromCollections: true
 ---
+Diese Seite ist leider noch nicht geqinkelt.
